--- a/android_demo/project.properties
+++ b/android_demo/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../EvaAPIs
+target=android-21
+android.library.reference.1=../../../devel/adt-bundle-linux-x86_64-20131030/sdk/extras/android/support/v7/appcompat
 
-android.library.reference.2=../../appcompat_v7
+android.library.reference.2=../EvaAPIs
 android.library.reference.3=../EvaSpeechRecognition
