--- a/android_search/.classpath
+++ b/android_search/.classpath
@@ -3,12 +3,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EvaAPIs"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Library-ListViewAnimations"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/roboguice-sherlock"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/showcaseView-library"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ViewPagerIndicator_library"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="third_party/Android-ViewPagerIndicator/library/src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/showcaseView-library"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
