--- a/android_search/AndroidManifest.xml
+++ b/android_search/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:name="com.virtual_hotel_agent.search.controllers.activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/StyledIndicators"
+            android:theme="@style/AppTheme"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan" 
             android:screenOrientation="portrait" >
