--- a/EvaSDK/sdk/src/main/AndroidManifest.xml
+++ b/EvaSDK/sdk/src/main/AndroidManifest.xml
@@ -1,8 +1,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.evature.evasdk">
 
-    <!--<application android:allowBackup="true" android:label="@string/app_name"-->
+    <application>
+        <!--android:allowBackup="true" android:label="@string/app_name"-->
         <!--android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">-->
-
-    <!--</application>-->
+    <activity
+        android:name="com.evature.evasdk.SearchByVoiceActivity"
+        android:screenOrientation="portrait"
+        android:windowSoftInputMode="adjustPan"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar"
+        android:excludeFromRecents="true"
+        android:launchMode="singleInstance"
+        >
+        <intent-filter>
+            <action android:name="com.google.android.gms.actions.SEARCH_ACTION"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+        </intent-filter>
+    </activity>
+    <activity
+        android:name="com.evature.evasdk.VolumeSettingsDialog"
+        android:excludeFromRecents="true"
+        android:launchMode="singleInstance"
+        android:theme="@android:style/Theme.Dialog">
+    </activity>
+    </application>
 
 </manifest>
