--- a/EvaSDK/sdk/src/main/AndroidManifest.xml
+++ b/EvaSDK/sdk/src/main/AndroidManifest.xml
@@ -3,7 +3,14 @@
     <application>
         <!--android:allowBackup="true" android:label="@string/app_name"-->
         <!--android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">-->
-    <activity
+
+        <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!--  For Eva Voice Search -->
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
+        <activity
         android:name=".EvaChatScreenActivity"
         android:screenOrientation="portrait"
         android:windowSoftInputMode="adjustPan"
