--- a/EvaSDK/evasdk/src/main/AndroidManifest.xml
+++ b/EvaSDK/evasdk/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.evature.evasdk">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.evature.evasdk">
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!--  For Eva Voice Search -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
         <!--android:allowBackup="true" android:label="@string/app_name"-->
         <!--android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">-->
-
-        <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!--  For Eva Voice Search -->
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        <uses-permission android:name="android.permission.INTERNET" />
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <activity
@@ -23,7 +24,7 @@
         </intent-filter>
     </activity>
     <activity
-        android:name="com.evature.evasdk.VolumeSettingsDialog"
+        android:name=".EvaVolumeSettingsDialog"
         android:excludeFromRecents="true"
         android:launchMode="singleInstance"
         android:theme="@android:style/Theme.Dialog">
