--- a/EvaSDK/evasdk/build.gradle
+++ b/EvaSDK/evasdk/build.gradle
@@ -4,6 +4,7 @@ import org.apache.tools.ant.taskdefs.condition.Os
 apply plugin: 'com.android.library'
 
 
+
 android {
     compileSdkVersion 22
     buildToolsVersion "21.1.2"
@@ -57,6 +58,8 @@ android {
     }
 }
 
+
+
 /*
 buildscript {
     repositories {
@@ -90,7 +93,7 @@ gradle.projectsEvaluated {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar', '*.so'])
-    compile "com.android.support:support-v4:22.2.0"
+    compile "com.android.support:support-v4:19+"
 }
 
 // http://tools.android.com/tech-docs/new-build-system/tips#TOC-Improving-Build-Server-performance.
