--- a/EvaSDK/evasdk/version.properties
+++ b/EvaSDK/evasdk/version.properties
@@ -1,3 +1,3 @@
-#Thu Feb 18 23:27:48 IST 2016
-VERSION_NAME=2.0.185
-VERSION_CODE=185
+#Mon Apr 04 14:18:25 IDT 2016
+VERSION_NAME=2.0.224
+VERSION_CODE=224
